improved analytics response object; expanded the swagger docs; added android as an os; implemented location grouping feature using ngeohash;
