# src/routes/analytics.ts
@@ -2,6 +2,10 @@ import express from 'express';
 import authMiddleware from '@/middlewares/auth.middleware';
 import serverSetup from '@/utils/serverSetup';
 import mongoClient from '@/utils/mongodb';
+import ngeohash from 'ngeohash';
+
+// lower precision -> bigger area -> more handwavy grouping
+const LOCATION_GROUPING_PRECISION = 4;
 
 const router = express.Router();
 router.use(authMiddleware.authenticatedUser);
@@ -10,6 +14,11 @@ router.get('/:alias', async (req, res) => {
   const db = await serverSetup.getDb(mongoClient);
   try {
     const alias = req.params.alias;
+    if(!alias) {
+      res.status(400).json({ error: 'Empty alias, please provide a link alias that you saved in path' });
+      return 
+    }
+
     const url = await db?.collection('urls').findOne({ alias });
 
     if (!url) {
@@ -17,9 +26,9 @@ router.get('/:alias', async (req, res) => {
       return 
     }
 
-    const analytics = await db?.collection('analytics').find({ urlId: url._id }).toArray();
+    const analytics = await db?.collection('analytics').find({ alias }).toArray();
 
-    res.json({
+    res.status(200).json({
       totalClicks: analytics?.length,
       uniqueUsers: new Set(analytics?.map((a: any) => a.ip)).size,
       clicksByDate: analytics?.reduce((acc: any, curr: any) => {
@@ -27,14 +36,15 @@ router.get('/:alias', async (req, res) => {
         acc[date] = (acc[date] || 0) + 1;
         return acc;
       }, {}),
-      osType: analytics?.reduce((acc: any, curr: any) => {
+      clicksByOS: analytics?.reduce((acc: any, curr: any) => {
         const os = curr.os || 'unknown';
-        acc[os] = { uniqueClicks: (acc[os]?.uniqueClicks || 0) + 1 };
+        acc[os] = (acc[os] || 0) + 1;
         return acc;
       }, {}),
-      deviceType: analytics?.reduce((acc: any, curr: any) => {
-        const device = curr.device || 'unknown';
-        acc[device] = { uniqueClicks: (acc[device]?.uniqueClicks || 0) + 1 };
+      clicksByLocation: analytics?.reduce((acc: any, { location }) => {
+        // Encode the coordinates into a geohash
+        const hash = ngeohash.encode(location.lat, location.lng, LOCATION_GROUPING_PRECISION);
+        acc[hash] = (acc[hash] || 0) + 1;
         return acc;
       }, {})
     });
